--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
     },
     "files.associations": {
         "typeinfo": "cpp"
+    },
+    "terminal.integrated.env.osx": {
+        "PATH": "/Users/alex/.platformio/penv/bin:/Users/alex/.platformio/penv:/Users/alex/.pyenv/shims:/Users/alex/bin:/usr/local/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/Library/TeX/texbin:/opt/X11/bin:/opt/local/bin:/Users/alex/esp/xtensa-esp32-elf/bin:/usr/local/bin/pyenv",
+        "PLATFORMIO_CALLER": "vscode"
     }
 }
